force-app/main/default/objects/HojaControlVisita__c/HojaControlVisita__c.object-meta.xml
<CustomObject>
    <label>HojaControlVisita</label>
    <nameField>
        <label>HojaControlVisita Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HojasControlVisita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>