force-app/main/default/objects/HojaControlVisita__c/fields/Acepto_comunicaciones_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Acepto_comunicaciones_comerciales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepto comunicaciones comerciales</label>
    <type>Checkbox</type>
</CustomField>