force-app/main/default/objects/HojaControlVisita__c/fields/Acepto_mensajes_de_whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Acepto_mensajes_de_whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepto mensajes de Whatsapp</label>
    <type>Checkbox</type>
</CustomField>