force-app/main/default/objects/HojaControlVisita__c/fields/Acepto_pol_tica_de_privacidad__c.field-meta.xml
<CustomField>
    <fullName>Acepto_pol_tica_de_privacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepto política de privacidad</label>
    <type>Checkbox</type>
</CustomField>