force-app/main/default/objects/HojaControlVisita__c/fields/HCV_FechaHora__c.field-meta.xml
<CustomField>
    <fullName>HCV_FechaHora__c</fullName>
    <label>HCV FechaHora</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>