force-app/main/default/objects/HojaControlVisita__c/fields/HCV_Usuario__c.field-meta.xml
<CustomField>
    <fullName>HCV_Usuario__c</fullName>
    <label>HCV Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>