force-app/main/default/objects/HojaControlVisita__c/fields/Login_FechaHora__c.field-meta.xml
<CustomField>
    <fullName>Login_FechaHora__c</fullName>
    <label>Login FechaHora</label>
    <type>DateTime</type>
</CustomField>