force-app/main/default/objects/HojaControlVisita__c/fields/Login_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Login_Usuario__c</fullName>
    <label>Login Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>